# VecMathLib

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  IDEAS  README  README.rst  autogen.sh  bench.cc  build.ninja  coeffs.out  example.cc  find-coeffs.m  floatprops.h  floattypes.h  instantiations.cc  loop.cc  mathfuncs.h  mathfuncs_asin.h  mathfuncs_asinh.h  mathfuncs_base.h  mathfuncs_convert.h  mathfuncs_exp.h  mathfuncs_fabs.h  mathfuncs_log.h  mathfuncs_pow.h  mathfuncs_rcp.h  mathfuncs_sin.h  mathfuncs_sinh.h  mathfuncs_sqrt.h  meson.build  real_properties.h  rules.ninja  selftest.cc  test.cc  vec_altivec_float4.h  vec_avx_double4.h  vec_avx_float8.h  vec_avx_fp16_16.h  vec_avx_fp8_32.h  (+31 more)
cmake/Modules/: README
pocl/: CMakeLists.txt  generate-files.py  pocl-compat.h
